// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Scale /> should render omitting a label 1`] = `
<div
  className="nice-scale"
>
  <ol
    className="nice-scale-selection"
  >
    <li
      key="1"
    >
      <label>
        <input
          name="projectid-radios"
          onChange={[Function]}
          type="radio"
          value={1}
        />
        <span />
        <span
          className="nice-scale-label"
        >
          Nice to have
        </span>
      </label>
    </li>
    <li
      key="5"
    >
      <label>
        <input
          name="projectid-radios"
          onChange={[Function]}
          type="radio"
          value={5}
        />
        <span />
      </label>
    </li>
    <li
      key="10"
    >
      <label>
        <input
          name="projectid-radios"
          onChange={[Function]}
          type="radio"
          value={10}
        />
        <span />
        <span
          className="nice-scale-label"
        >
          Must have
        </span>
      </label>
    </li>
  </ol>
</div>
`;

exports[`<Scale /> should render with all labels 1`] = `
<div
  className="nice-scale"
>
  <ol
    className="nice-scale-selection"
  >
    <li
      key="1"
    >
      <label>
        <input
          name="projectid-radios"
          onChange={[Function]}
          type="radio"
          value={1}
        />
        <span />
        <span
          className="nice-scale-label"
        >
          Nice to have
        </span>
      </label>
    </li>
    <li
      key="5"
    >
      <label>
        <input
          name="projectid-radios"
          onChange={[Function]}
          type="radio"
          value={5}
        />
        <span />
        <span
          className="nice-scale-label"
        >
          Good to have
        </span>
      </label>
    </li>
    <li
      key="10"
    >
      <label>
        <input
          name="projectid-radios"
          onChange={[Function]}
          type="radio"
          value={10}
        />
        <span />
        <span
          className="nice-scale-label"
        >
          Must have
        </span>
      </label>
    </li>
  </ol>
</div>
`;
